--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://i.postimg.cc/sDKr1GT4/DSC-0653.jpg" />
+    <link rel="icon" href="https://i.postimg.cc/nLK5KBpH/Profile-Image-removebg-preview.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Harsh Shukla's Portfolio" />
