--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://i.postimg.cc/nLK5KBpH/Profile-Image-removebg-preview.png" />
+    <link rel="icon" href="https://logodix.com/logo/758216.png" />
+    <!-- <link rel="icon" href="https://i.postimg.cc/nLK5KBpH/Profile-Image-removebg-preview.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Harsh Shukla's Portfolio" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="https://logodix.com/logo/758216.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
